--- a/app/src/main/res/layout/activity_adiconar_medico.xml
+++ b/app/src/main/res/layout/activity_adiconar_medico.xml
@@ -113,4 +113,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear" />
+
+    <ProgressBar
+        android:id="@+id/progressAdcMedico"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="62dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarAdcMedico"
+        app:layout_constraintVertical_bias="0.435" />
 </android.support.constraint.ConstraintLayout>
