--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,10 @@
         <item name="android:colorBackground">@color/background_material_light</item>
     </style>
 
+    <style name="ToolbarTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+    </style>
+
     <!-- Style/Theme dos inputs da tela de login -->
     <style name="StyledTilEditTextTheme">
         <item name="colorControlNormal">#e6ffffff</item>
