--- a/app/src/main/res/layout/activity_editar_medico.xml
+++ b/app/src/main/res/layout/activity_editar_medico.xml
@@ -36,7 +36,7 @@
             android:text="Nome" />
 
         <EditText
-            android:id="@+id/editAdcMedicoNome"
+            android:id="@+id/editMedicoNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -50,7 +50,7 @@
             android:text="CRM" />
 
         <EditText
-            android:id="@+id/editAdcMedicoCRM"
+            android:id="@+id/editMedicoCrm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -64,7 +64,7 @@
             android:text="Telefone" />
 
         <EditText
-            android:id="@+id/editAdcMedicoTelefone"
+            android:id="@+id/editMedicoTelefone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -78,7 +78,7 @@
             android:text="Especialidade" />
 
         <EditText
-            android:id="@+id/editAdcMedicoEspecialidae"
+            android:id="@+id/editMedicoEspecialidae"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -92,7 +92,7 @@
             android:text="Email" />
 
         <EditText
-            android:id="@+id/editAdcMedicoEmail"
+            android:id="@+id/editMedicoEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -101,21 +101,21 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/buttonAdcMedico"
+        android:id="@+id/buttonEditarMedico"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@color/colorPrimary"
-        android:text="Cadastrar"
+        android:text="SALVAR"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear" />
 
     <ProgressBar
-        android:id="@+id/progressAdcMedico"
+        android:id="@+id/progressEditMedico"
         style="?android:attr/progressBarStyle"
         android:layout_width="62dp"
         android:layout_height="61dp"
