--- a/app/src/main/res/layout/adapter_medicos.xml
+++ b/app/src/main/res/layout/adapter_medicos.xml
@@ -96,6 +96,34 @@
                     android:layout_weight="1" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnMedicoAtualizar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_weight="1"
+                    android:background="#08ae9e"
+                    android:padding="5dp"
+                    android:text="Atualizar"
+                    android:textColor="@android:color/white" />
+
+                <Button
+                    android:id="@+id/btnMedicoRemover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_weight="1"
+                    android:background="#c95d63"
+                    android:text="Remover"
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
