--- a/app/src/main/res/menu/menu_configuracoes.xml
+++ b/app/src/main/res/menu/menu_configuracoes.xml
@@ -4,10 +4,10 @@
         android:id="@+id/itemEditar"
         android:title="Editar"
         android:orderInCategory="100"/>
-    <item
-        android:id="@+id/itemAlterarSenha"
-        android:title="Alterar senha"
-        android:orderInCategory="200"/>
+    <!--<item-->
+        <!--android:id="@+id/itemAlterarSenha"-->
+        <!--android:title="Alterar senha"-->
+        <!--android:orderInCategory="200"/>-->
     <item
         android:id="@+id/itemSair"
         android:title="Sair"
